--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,6 @@
-html, body, .app-container, .dash-container, .container {
-    margin: 0px;
-    padding: 0px;
-}
-div {
-    margin: 0px;
-    padding: 0px;
+html, body {
+    margin: 0;
+    padding: 0;
+    background-color: #f0f2f5; /* ton gris clair */
+    height: 100%;
 }
